tests/neg/notfound-term-but-type.scala
def test[T] = println(T) // error