tests/neg/notfound-term-but-type.check
-- [E006] Not Found Error: tests/neg/notfound-term-but-type.scala:1:22 -------------------------------------------------
1 |def test[T] = println(T) // error
  |                      ^
  |                      Not found: T
  |
  | longer explanation available when compiling with `-explain`
